<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".example.control.ScaleBarActivity">

        <com.kt.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="13dp"
            android:padding="15dp"
            android:background="@drawable/basic_button_shape">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_enable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scale_bar_enable"
                android:checked="true"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_top"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_margin"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_text_color"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_text_size"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_line_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_line_color"
                app:switchPadding="10dp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/scale_bar_margin_between_text_and_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scale_bar_margin_between_text_and_bar"
                app:switchPadding="10dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
