<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="activity"
                  type="com.kt.maps.sample.example.overlay.PolygonOverlayActivity"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <com.kt.maps.sdk.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />

        <Button
                android:id="@+id/btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polygon_overlay_activity_create"
                android:background="@drawable/selector_basic_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
        />

        <Button
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polygon_overlay_activity_remove"
                android:background="@drawable/selector_basic_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_create"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
        />

        <Button
                android:id="@+id/btn_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polygon_overlay_activity_new"
                android:background="@drawable/selector_basic_btn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_remove"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
        />

        <RadioGroup
                android:id="@+id/radio_group"
                app:layout_constraintTop_toBottomOf="@id/btn_create"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal"
                android:background="@drawable/basic_button_shape">

            <RadioButton
                    android:id="@+id/radio_outer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/polygon_overlay_activity_outer"/>

            <RadioButton
                    android:id="@+id/radio_inner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/polygon_overlay_activity_inner"/>
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>



